Fixed bug with half-darkened modal background when modal is too long

--- a/html/ui/css/app.css
+++ b/html/ui/css/app.css
@@ -3292,6 +3292,9 @@ input.masked {
   padding-bottom:8px;
 } 
 
+.modal-backdrop {
+  height: 1500px !important;
+}
 .modal-context-help {
   color: #4CAA6E;
 }
